# YoYoNetworking

./: .gitmodules  CMakeLists.txt  readme.md
Client/: CMakeLists.txt
Client/assets/models/: HipHopDancing.dae  mutant.fbx  plane.fbx
Client/assets/shaders/: blit_shader.frag.spv  lit_shader.vert  lit_skinned_debug_shader.vert  lit_skinned_shader.vert  lit_skinned_shader.vert.spv  offscreen_shadow_instanced_shader.vert  offscreen_shadow_shader.frag.spv  offscreen_shadow_shader.vert  offscreen_skinned_shadow_shader.vert.spv  unlit_instanced_shader.vert.spv  unlit_particle_instanced_shader.vert  unlit_particle_instanced_shader.vert.spv  unlit_particle_shader.frag
Client/assets/textures/: smoke.yo
Client/src/: Actor.h  ActorTypes.cpp  ActorTypes.h  Client.cpp  Client.h  GameConsole.cpp  GameConsole.h  PlayerController.h  Registry.h  RegistryEvents.cpp  RegistryEvents.h  Sandbox.cpp
Client/src/Card/: Card.cpp  Card.h  Fighter.h  Unit.cpp  Unit.h
Client/src/Renderable/: Renderable.cpp  Renderable.h
Client/src/SceneGraph/: Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h
Client/src/Scripting/: ScriptableActor.cpp  ScriptableActor.h
Networking/: CMakeLists.txt
Networking/include/: FumblyNet.cpp  FumblyNet.h
Networking/src/: ByteSwap.h  Chat.cpp  MemoryStream.cpp  MemoryStream.h  SocketAddress.cpp  SocketAddress.h  SocketUtil.cpp  SocketUtil.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  epch.h
Networking/tests/: CMakeLists.txt  StreamTests.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp  Sandbox.h
Server/: CMakeLists.txt
Server/assets/models/: Humanoid.fbx  Running.dae  character-digger.fbx
Server/assets/shaders/: full_screen_shader.vert.spv  lit_instanced_shader.vert  lit_instanced_shader.vert.spv  lit_shader.frag.spv  lit_shader.vert.spv  lit_skinned_debug_shader.frag.spv  lit_skinned_debug_shader.vert.spv  offscreen_shadow_instanced_shader.vert.spv  offscreen_shadow_shader.vert.spv  offscreen_skinned_shadow_shader.vert  unlit_collider_debug_shader.frag.spv  unlit_instanced_shader.vert  unlit_particle_shader.frag.spv  unlit_shader.frag.spv
Server/src/: Sandbox.cpp  Server.cpp  Server.h
