# GoogleTest requires at least C++14
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
add_library(GTest::GTest INTERFACE IMPORTED)
target_link_libraries(GTest::GTest INTERFACE gtest_main)

add_executable(StreamTests StreamTests.cpp)
target_link_libraries(StreamTests PRIVATE GTest::GTest Networking)
target_include_directories(StreamTests PRIVATE ${CMAKE_SOURCE_DIR}/Networking/src)

add_test(NAME StreamGTests COMMAND $<TARGET_FILE:StreamTests>)
